tests/baselines/reference/project/jsFileCompilationSameNameFilesSpecifiedWithAllowJs/node/jsFileCompilationSameNameFilesSpecifiedWithAllowJs.errors.txt
SameNameTsSpecifiedWithAllowJs/tsconfig.json(2,24): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


==== SameNameTsSpecifiedWithAllowJs/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "allowJs": true },
                           ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
      "files": [ "a.ts" ]
    }
==== SameNameTsSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;